# django-sre

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
django_sre/django_sre/: asgi.py  settings.py  urls.py  wsgi.py
django_sre/health/: urls.py  views.py
jmeter/: Django SRE.jmx
src/django_sre/: manage.py
src/django_sre/django_sre/: settings.py  urls.py
