[tool.poetry]
name = "django-sre"
version = "0.1.0"
description = "Demonstration app to demonstrate developing SRE software as web services."
authors = ["Robert Barrimond <robert@barrimond.com>"]
readme = "README.md"
packages = [{include = "django_sre"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-okta-auth = "^0.8.0"
boto3 = "^1.25.5"
requests = "^2.28.1"
psycopg = "^3.1.4"
openpyxl = "^3.0.10"
pandas = "^1.5.1"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.7"
django-prometheus = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
